--- a/package.json
+++ b/package.json
@@ -95,17 +95,23 @@
     }
   },
   "dependencies": {
+    "@emotion/react": "^11.10.8",
+    "@emotion/styled": "^11.10.8",
     "@fontsource/poppins": "^4.5.10",
+    "@formkit/auto-animate": "^1.0.0-beta.6",
     "daisyui": "^2.51.5",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-store": "^8.1.0",
     "electron-updater": "^5.3.0",
+    "fuse.js": "^6.6.2",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-player": "^2.12.0",
     "react-router-dom": "^6.8.1",
+    "react-spring": "^9.7.1",
     "react-toastify": "^9.1.2",
     "zustand": "^4.3.7"
   },
@@ -118,6 +124,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.4.0",
+    "@types/lodash": "^4.14.194",
     "@types/node": "18.13.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
