--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "@emotion/styled": "^11.10.8",
     "@fontsource/poppins": "^4.5.10",
     "@formkit/auto-animate": "^1.0.0-beta.6",
+    "buffer": "^6.0.3",
     "daisyui": "^2.51.5",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
@@ -106,7 +107,9 @@
     "electron-updater": "^5.3.0",
     "fuse.js": "^6.6.2",
     "lodash": "^4.17.21",
+    "music-metadata-browser": "^2.5.10",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-player": "^2.12.0",
@@ -127,6 +130,7 @@
     "@types/lodash": "^4.14.194",
     "@types/node": "18.13.0",
     "@types/react": "^18.0.27",
+    "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-dom": "^18.0.10",
     "@types/react-test-renderer": "^18.0.0",
     "@types/terser-webpack-plugin": "^5.0.4",
