--- a/package.json
+++ b/package.json
@@ -99,13 +99,16 @@
     "@emotion/styled": "^11.10.8",
     "@fontsource/poppins": "^4.5.10",
     "@formkit/auto-animate": "^1.0.0-beta.6",
+    "axios": "^1.4.0",
     "buffer": "^6.0.3",
     "daisyui": "^2.51.5",
+    "debounce": "^1.2.1",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-store": "^8.1.0",
     "electron-updater": "^5.3.0",
     "fuse.js": "^6.6.2",
+    "he": "^1.2.0",
     "lodash": "^4.17.21",
     "music-metadata-browser": "^2.5.10",
     "react": "^18.2.0",
@@ -113,6 +116,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-player": "^2.12.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.8.1",
     "react-spring": "^9.7.1",
     "react-toastify": "^9.1.2",
@@ -126,6 +130,7 @@
     "@teamsupercell/typings-for-css-modules-loader": "^2.5.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@types/he": "^1.2.0",
     "@types/jest": "^29.4.0",
     "@types/lodash": "^4.14.194",
     "@types/node": "18.13.0",
